Fixed : overlay overflowing in dev img

--- a/src/app/pages/team-list/team-list.module.sass
+++ b/src/app/pages/team-list/team-list.module.sass
@@ -147,7 +147,7 @@ body
         .hover
           position: absolute
           width: 100%
-          height: 100%
+          height: 98%
           border-radius: 25px
           top: 0
           z-index: 9
